Fixed timeline on mobile

--- a/app/src/app/extras/extras.module.scss
+++ b/app/src/app/extras/extras.module.scss
@@ -85,19 +85,18 @@ $timeline-point: 100px;
 
 @media (max-width: 599px) {
   .timeline {
+    padding-top: 110px;
     overflow: visible;
     .timeline-point {
-      position: relative;
       top: 0;
-      right: 0;
-      transform: none;
-      margin-bottom: 20px;
+      right: 50%;
+      transform: translate3D(50%, 0%, 0);
     }
     .timeline-x-axis {
       display: none;
     }
     .timeline-y-axis {
-      top: 0 !important;
+      top: 0;
       transform: rotate(90deg) translateX(0%) !important;
     }
   }
